--- a/public/index.html
+++ b/public/index.html
@@ -3,53 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TaskMaster</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
-<body>
-    <div id="app">
-        <header>
-            <h1>TaskMaster</h1>
-            <div id="user-info"></div>
-        </header>
-        <main>
-            <div id="auth-container">
-                <h2>Login</h2>
-                <form id="login-form">
-                    <input type="text" id="login-username" placeholder="Username" required>
-                    <input type="password" id="login-password" placeholder="Password" required>
-                    <button type="submit">Login</button>
-                </form>
-                <p>Don't have an account? <a href="#" id="show-register">Register</a></p>
-            </div>
-            <div id="task-container" style="display: none;">
-                <h2>Tasks</h2>
-                <form id="task-form">
-                    <input type="text" id="task-title" placeholder="Task Title" required>
-                    <textarea id="task-description" placeholder="Task Description"></textarea>
-                    <input type="date" id="task-deadline">
-                    <select id="task-priority">
-                        <option value="low">Low</option>
-                        <option value="medium">Medium</option>
-                        <option value="high">High</option>
-                    </select>
-                    <button type="submit">Add Task</button>
-                </form>
-                <div id="task-filters">
-                    <input type="text" id="search-input" placeholder="Search tasks">
-                    <select id="priority-filter">
-                        <option value="">All Priorities</option>
-                        <option value="low">Low</option>
-                        <option value="medium">Medium</option>
-                        <option value="high">High</option>
-                    </select>
-                    <input type="date" id="due-date-filter">
-                </div>
-                <ul id="task-list"></ul>
-            </div>
-        </main>
+<body>   
+  <header class="header">
+    <div class="header-container">
+      <a href="/" class="logo">
+        <svg fill="#3157f2" class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52" enable-background="new 0 0 52 52" xml:space="preserve">
+          <!-- SVG content -->
+        </svg>
+        <span class="site-title">TaskMaster</span>
+      </a>
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+      <nav class="navigation">
+        <ul class="nav-list">
+          <li><a href="#features" class="nav-link">Features</a></li>
+          <li><a href="#" class="nav-link">Pricing</a></li>
+          <li><a href="#" class="nav-link">About</a></li>
+          <li><a href="#" class="nav-link">Contact</a></li>
+        </ul>
+      </nav>
     </div>
-    <script src="app.js"></script>
+  </header>
+  
+      
+
+
+<script>
+  function toggleMenu() {
+  const navigation = document.querySelector('.navigation');
+  navigation.classList.toggle('active');
+}
+
+</script>
 </body>
 </html>
-
