--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,22 @@
     </div>
   </header>
   
+  <div class="hero-section">
+     <div class="hero-sec">
+      <div class="hero-content">
+        <h1>Master Your Tasks, Maximize Your Time.</h1>
+        <p>
+          Organize, prioritize, and conquer your goals with TaskMaster—your ultimate productivity companion.
+        </p>
+        <button class="cta-button">Get Started</button>
+      </div>
+    
+      <div class="hero-image">
+        <img src="./assets/hedImg.png" alt="Task management illustration">
+      </div>
+     </div>
+  </div>
+  
       
 
 
