hero-content, contact, feature, about-us

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    rel="stylesheet"/>
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
@@ -30,9 +33,9 @@
   <div class="hero-section">
      <div class="hero-sec">
       <div class="hero-content">
-        <h1>Master Your Tasks, Maximize Your Time.</h1>
+        <h1>increase your productivity with the best task management software </h1>
         <p>
-          Organize, prioritize, and conquer your goals with TaskMaster—your ultimate productivity companion.
+          Streamline your workflow, prioritize with ease, and achieve more every day with <strong style="color: #5971cf; text-decoration: underline;">TaskMaster</strong>
         </p>
         <button class="cta-button">Get Started</button>
       </div>
@@ -43,7 +46,67 @@
      </div>
   </div>
   
-      
+  <section class="features-section">
+    <div class="features-container">
+      <div class="feature">
+        <i class="fas fa-tasks feature-icon"></i>
+        <h3>Organized Task Management</h3>
+        <p>Easily organize and track your tasks to stay on top of your goals.</p>
+      </div>
+  
+      <div class="feature">
+        <i class="fas fa-layer-group feature-icon"></i>
+        <h3>Prioritization Tools</h3>
+        <p>Focus on what matters most with our smart prioritization features.</p>
+      </div>
+  
+      <div class="feature">
+        <i class="fas fa-chart-line feature-icon"></i>
+        <h3>Insightful Analytics</h3>
+        <p>Monitor your productivity and improve over time with detailed insights.</p>
+      </div>
+    </div>
+  </section>
+  
+  <section class="about-us">
+    <div class="about">
+      <img src="./assets/about.png" alt="TaskMaster" class="pic" />
+      <div class="text">
+        <h2>About Us</h2>
+        <h5>TaskMaster</h5>
+        <p>
+          At TaskMaster, we believe in empowering individuals and teams to achieve their goals efficiently. 
+          Our mission is to provide innovative tools that help you stay organized, prioritize tasks, 
+          and collaborate seamlessly. Whether you’re managing daily to-dos or large projects, TaskMaster 
+          is your trusted companion for maximizing productivity and reaching success with confidence.
+        </p>
+      </div>
+    </div>
+  </section>
+  
+  <section class="contact-us">
+    <div class="contact-container">
+      <div class="contact-info">
+        <h2>Contact Us</h2>
+        <p>Have questions or need support? We’d love to hear from you! Reach out to us, and we’ll get back to you as soon as possible.</p>
+        <ul>
+          <li> <i class="fab fa-twitter"></i>usman_alfaki</li>
+          <li><i class="fab fa-github"></i>ussyalfaks</li>
+          <li><i class="fas fa-envelope"></i> support@taskmaster.com</li>
+          <li><i class="fas fa-phone"></i> +234 8166280639</li>
+          <li><i class="fas fa-map-marker-alt"></i> 123 TaskMaster Lane, Productivity City</li>
+        </ul>
+      </div>
+      <form class="contact-form">
+        <input type="text" placeholder="Your Name" required />
+        <input type="email" placeholder="Your Email" required />
+        <textarea placeholder="Your Message" rows="5" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </div>
+  </section>
+  
+  
 
 
 <script>
