features-section, about-us,  contact-us

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,10 @@
       <nav class="navigation">
         <ul class="nav-list">
           <li><a href="#features" class="nav-link">Features</a></li>
-          <li><a href="#" class="nav-link">Pricing</a></li>
-          <li><a href="#" class="nav-link">About</a></li>
-          <li><a href="#" class="nav-link">Contact</a></li>
+          <li><a href="#about-us" class="nav-link">About</a></li>
+          <li><a href="#contact-us" class="nav-link">Contact</a></li>
         </ul>
-        <button class="button-90">Login</button>
+        <a href="all.html"><button class="button-90">Login</button></a>
       </nav>
     </div>
   </header>
@@ -46,7 +45,7 @@
      </div>
   </div>
   
-  <section class="features-section">
+  <section class="features-section" id="features">
     <div class="features-container">
       <div class="feature">
         <i class="fas fa-tasks feature-icon"></i>
@@ -68,7 +67,7 @@
     </div>
   </section>
   
-  <section class="about-us">
+  <section class="about-us" id="about-us">
     <div class="about">
       <img src="./assets/about.png" alt="TaskMaster" class="pic" />
       <div class="text">
@@ -84,7 +83,7 @@
     </div>
   </section>
   
-  <section class="contact-us">
+  <section class="contact-us" id="contact-us">
     <div class="contact-container">
       <div class="contact-info">
         <h2>Contact Us</h2>
@@ -106,6 +105,37 @@
     </div>
   </section>
   
+  
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-about">
+        <h3>TaskMaster</h3>
+        <p>TaskMaster helps you stay organized, prioritize effectively, and collaborate seamlessly. Maximize your productivity with ease.</p>
+      </div>
+  
+      <div class="footer-links">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#contact">Contact Us</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-social">
+        <h4>Follow Us</h4>
+        <a href="https://github.com/ussyalfaks" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/usman_alfaki" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+        <a href="https://facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/usman-abdulkadir-079344299/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </div>
+  
+    <div class="footer-bottom">
+      <p>&copy; 2024 TaskMaster. All Rights Reserved.</p>
+    </div>
+  </footer>
   
 
 
