--- a/public/all.html
+++ b/public/all.html
@@ -5,28 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaskMaster</title>
     <link rel="stylesheet" href="styles.css">
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    rel="stylesheet"/>
 </head>
 <body>
     <div id="app">
         <header>
-            <h1>TaskMaster</h1>
             <div id="user-info"></div>
         </header>
         <main>
             <div id="auth-container">
                 <h2 class="loginH">Login</h2>
-                <p class="register">Need to manage your task an account? <a href="#" id="show-register">Register</a></p>
                 <form id="login-form">
                     <input type="text" id="login-username" placeholder="Username" required>
                     <input type="password" id="login-password" placeholder="Password" required>
                     <button type="submit">Login</button>
                 </form>
+                <p class="register">Need to manage your task an account? <a href="#" id="show-register">Register</a></p>
             </div>
 
 
             
-            <div id="task-container" style="display: none; color: antiquewhite;">
-                <h2>Tasks</h2>
+            <div id="task-container" style="display: none;">
                 <form id="task-form">
                     <input type="text" id="task-title" placeholder="Task Title" required>
                     <textarea id="task-description" placeholder="Task Description"></textarea>
@@ -48,7 +49,7 @@
                     </select>
                     <input type="date" id="due-date-filter">
                 </div>
-                <ul id="task-list"></ul>
+                <ul id="task-list" class="task-grid"></ul>
             </div>
         </main>
     </div>
