--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       <div class="hero-content">
         <h1>increase your productivity with the best task management software </h1>
         <p>
-          Streamline your workflow, prioritize with ease, and achieve more every day with <strong style="color: #5971cf; text-decoration: underline;">TaskMaster</strong>
+          Streamline your workflow, prioritize with ease, and achieve more every day with <strong style="color: #5971cf; text-decoration: underline;">Task Master</strong>
         </p>
         <button class="cta-button">Get Started</button>
       </div>
@@ -73,11 +73,14 @@
       <div class="text">
         <h2>About Us</h2>
         <h5>TaskMaster</h5>
+
+
+        
         <p>
           At TaskMaster, we believe in empowering individuals and teams to achieve their goals efficiently. 
           Our mission is to provide innovative tools that help you stay organized, prioritize tasks, 
           and collaborate seamlessly. Whether you’re managing daily to-dos or large projects, TaskMaster 
-          is your trusted companion for maximizing productivity and reaching success with confidence.
+          is your trusted companion for maximizing productivity and reaching success with confidence
         </p>
       </div>
     </div>
