--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TaskMaster</title>
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     rel="stylesheet"/>
@@ -75,7 +75,7 @@
         <h5>TaskMaster</h5>
 
 
-        
+
         <p>
           At TaskMaster, we believe in empowering individuals and teams to achieve their goals efficiently. 
           Our mission is to provide innovative tools that help you stay organized, prioritize tasks, 
