--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,9 @@
         <p>
           Streamline your workflow, prioritize with ease, and achieve more every day with <strong style="color: #5971cf; text-decoration: underline;">Task Master</strong>
         </p>
+        <a href="./all.html">
         <button class="cta-button">Get Started</button>
+        </a>
       </div>
     
       <div class="hero-image">
